--- a/config/config.yml
+++ b/config/config.yml
@@ -2,15 +2,12 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: https://danielrbradley.github.io/
+url: https://danielrbradley.github.io
 gitlocation: https://github.com/danielrbradley/danielrbradley.github.io.git
 gitbranch: gh-pages
-title: FsBlog - F# static site generation
+title: DanielBradley.Net - The Argumentative Exception
 description: >
-    FsBlog aims to be a blog-aware static site generator, mostly built in F#. But don't worry,
-    you won't even need to know any F# to get up and running. So long as you are comfortable
-    using a command line or terminal, and have a degree of familiarity with Markdown and Razor
-    syntax - you're good to go!
+    A place for me to air my oppinions about all things programming.
 
 source: source/
 blog: source/blog/
