Add custom domain

--- a/config/config.yml
+++ b/config/config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: https://danielrbradley.github.io
+url: https://www.danielbradley.net
 gitlocation: https://github.com/danielrbradley/danielrbradley.github.io.git
 gitbranch: gh-pages
 title: DanielBradley.Net - The Argumentative Exception
